<resources>
    <string name="app_name">Musically</string>
    <string name="play_list" translatable="false">Playlist</string>
    <string name="albums">Albums</string>
    <string name="musics">Musics</string>
    <string name="artists">Artists</string>
    <string name="podcasts" translatable="false">Podcasts</string>
    <string name="music_store">Store</string>
    <string name="music_playing" translatable="false">Bliss - Loveprayer - I Hear You Call</string>
    <string name="currentTime" translatable="false">1:20</string>
    <string name="finalTime" translatable="false">2:35</string>
    <string name="musicOne">Music One</string>
    <string name="musicTwo">Music Two</string>
    <string name="musicThree" translatable="false">I Hear You Call</string>
    <string name="musicFour">Music Four</string>
    <string name="musicFive">Music Five</string>
    <string name="musicSix">Music Six</string>
    <string name="musicSeven">Music Seven</string>
    <string name="musicEight">Music Eight</string>
    <string name="musicNine">Music Nine</string>
    <string name="musicTen">Music Ten</string>
    <string name="searchMusic">Search music</string>
    <string name="searchArtist">Search artist</string>
    <string name="searchAlbum">Search album</string>
    <string name="searchAny">Search</string>
    <string name="textAlbum" translatable="false">Bliss\nLoveprayer\n1989</string>
    <string name="textAlbumSample" translatable="false">Artist\nAlbum\nAlbum year</string>
    <string name="artistA">Artist A</string>
    <string name="artistB" translatable="false">Bliss</string>
    <string name="artistC">Artist C</string>
    <string name="artistD">Artist D</string>
    <string name="artistE">Artist E</string>
    <string name="artistF">Artist F</string>
    <string name="artistG">Artist G</string>
    <string name="artistH">Artist H</string>
    <string name="artistI">Artist I</string>
    <string name="artistJ">Artist J</string>
    <string name="artistK">Artist K</string>
    <string name="artistL">Artist L</string>
    <string name="artistM">Artist M</string>
    <string name="artistN">Artist N</string>
    <string name="artistO">Artist O</string>
    <string name="artistP">Artist P</string>
    <string name="artistQ">Artist Q</string>
    <string name="artistR">Artist R</string>
    <string name="artistS">Artist S</string>
    <string name="artistT">Artist T</string>

    <string name="musicA">Music A</string>
    <string name="musicB">Music B</string>
    <string name="musicC">Music C</string>
    <string name="musicD">Music D</string>
    <string name="musicE">Music E</string>
    <string name="musicF">Music F</string>
    <string name="musicG">Music G</string>
    <string name="musicH">Music H</string>
    <string name="musicI" translatable="false">I Hear You Call - Loverprayer - Bliss</string>
    <string name="musicJ">Music J</string>
    <string name="musicK">Music K</string>
    <string name="musicL">Music L</string>
    <string name="musicM">Music M</string>
    <string name="musicN">Music N</string>
    <string name="musicO">Music O</string>
    <string name="musicP">Music P</string>
    <string name="musicQ">Music Q</string>
    <string name="musicR">Music R</string>
    <string name="musicS">Music S</string>
    <string name="musicT">Music T</string>

    <string name="sampleSearchContent" translatable="false">Bliss</string>
    <string name="musicStoreTitle">Musics</string>
    <string name="albumsStoreTitle">Albums</string>
    <string name="valueMusic">$1.25</string>
    <string name="valueAlbum">$13.80</string>
    <string name="buyButton">Buy</string>
    <string name="payment">Payment</string>
    
    <string name="googlePlayAPI">Implement billing in the app\nwith Google Play API.\n\nhttps://goo.gl/XbCq8o</string>

    <string name="descPlaylist">The song that is playing and \nlist of next songs selected to play.</string>
    <string name="descArtist">Search for artists and\nlist of founded artists.</string>
    <string name="descAlbums">Search for albums and\nlist of founded albums.</string>
    <string name="descMusics">Music search and list\nof founded musics.</string>
    <string name="descStore">Search for contents, list of founded\ncontents and purchase options.</string>
    <string name="descPayment">Interface for payment of\nthe chosen content in the store.</string>
</resources>
