<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.musically.MainActivity">

    <TextView
        style="@style/description"
        android:text="@string/descMusics" />

    <LinearLayout style="@style/linearMenu1">

        <LinearLayout style="@style/linearMenu2">

            <TextView
                android:id="@+id/playList"
                style="@style/navButton"
                android:text="@string/play_list" />

            <TextView
                android:id="@+id/artists"
                style="@style/navButton"
                android:text="@string/artists" />

            <TextView
                android:id="@+id/albums"
                style="@style/navButton"
                android:text="@string/albums" />

            <TextView
                android:id="@+id/musics"
                style="@style/navSelected"
                android:text="@string/musics" />

            <TextView
                android:id="@+id/musicStore"
                style="@style/navButton"
                android:text="@string/music_store" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/searchMusic"
        style="@style/searchField"
        android:hint="@string/searchMusic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicA" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicB" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicC" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicD" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicE" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicF" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicG" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicH" />

            <TextView
                android:id="@+id/sampleMusic"
                style="@style/musicRecord"
                android:background="@color/colorAccent"
                android:text="@string/musicI" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicJ" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicJ" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicK" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicL" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicM" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicN" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicO" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicP" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicQ" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicR" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
