<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.musically.MainActivity">

    <TextView
        style="@style/description"
        android:text="@string/descPlaylist" />

    <LinearLayout style="@style/linearMenu1">

        <LinearLayout style="@style/linearMenu2">

            <TextView
                android:id="@+id/playList"
                style="@style/navSelected"
                android:text="@string/play_list" />

            <TextView
                android:id="@+id/artists"
                style="@style/navButton"
                android:text="@string/artists" />

            <TextView
                android:id="@+id/albums"
                style="@style/navButton"
                android:text="@string/albums" />

            <TextView
                android:id="@+id/musics"
                style="@style/navButton"
                android:text="@string/musics" />

            <TextView
                android:id="@+id/musicStore"
                style="@style/navButton"
                android:text="@string/music_store" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/musicCover"
            style="@style/musicCover"
            android:layout_weight="2.3"
            android:src="@drawable/bliss_band_sample" />

        <TextView
            style="@style/musicPlaying"
            android:layout_weight="5.3"
            android:text="@string/music_playing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTime"
                style="@style/playTime"
                android:layout_weight="3"
                android:text="@string/currentTime" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:max="100"
                android:progress="30"
                android:progressTint="@color/colorWhite" />

            <TextView
                android:id="@+id/finalTime"
                style="@style/playTime"
                android:layout_weight="3"
                android:text="@string/finalTime" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicOne" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicTwo" />

                <TextView
                    style="@style/musicTrack"
                    android:background="@color/colorAccent"
                    android:text="@string/musicThree" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicFour" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicFive" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicSix" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicSeven" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicEight" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicNine" />

                <TextView
                    style="@style/musicTrack"
                    android:text="@string/musicTen" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>