<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.musically.MainActivity">

    <TextView
        style="@style/description"
        android:text="@string/descStore" />

    <LinearLayout style="@style/linearMenu1">

        <LinearLayout style="@style/linearMenu2">

            <TextView
                android:id="@+id/playList"
                style="@style/navButton"
                android:text="@string/play_list" />

            <TextView
                android:id="@+id/artists"
                style="@style/navButton"
                android:text="@string/artists" />

            <TextView
                android:id="@+id/albums"
                style="@style/navButton"
                android:text="@string/albums" />

            <TextView
                android:id="@+id/musics"
                style="@style/navButton"
                android:text="@string/musics" />

            <TextView
                android:id="@+id/musicStore"
                style="@style/navSelected"
                android:text="@string/music_store" />

        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/searchArtist"
        style="@style/searchField"
        android:hint="@string/searchAny"
        android:text="@string/sampleSearchContent" />

    <TextView
        style="@style/storeTitles"
        android:text="@string/musicStoreTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sampleMusic"
                    style="@style/musicRecord"
                    android:background="@color/colorAccent"
                    android:text="@string/musicI" />

                <TextView
                    style="@style/priceStore"
                    android:text="@string/valueMusic" />

                <Button
                    android:id="@+id/buyMusic"
                    style="@style/buyButton"
                    android:text="@string/buyButton" />
            </LinearLayout>

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicD" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicE" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicF" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicG" />

            <TextView
                style="@style/musicRecord"
                android:text="@string/musicH" />

        </LinearLayout>
    </ScrollView>

    <TextView
        style="@style/storeTitles"
        android:text="@string/albumsStoreTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    style="@style/albumCoverStore"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/sampleAlbum"
                    style="@style/albumCoverStore"
                    android:src="@drawable/bliss_band_sample" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbum" />

                <TextView
                    style="@style/priceStore"
                    android:text="@string/valueAlbum" />

                <Button
                    android:id="@+id/buyAlbum"
                    style="@style/buyButton"
                    android:text="@string/buyButton" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    style="@style/albumCoverStore"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    style="@style/albumCoverStore"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
