<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.android.musically.MainActivity">

    <TextView
        style="@style/description"
        android:text="@string/descAlbums" />

    <LinearLayout style="@style/linearMenu1">

        <LinearLayout style="@style/linearMenu2">

            <TextView
                android:id="@+id/playList"
                style="@style/navButton"
                android:text="@string/play_list" />

            <TextView
                android:id="@+id/artists"
                style="@style/navButton"
                android:text="@string/artists" />

            <TextView
                android:id="@+id/albums"
                style="@style/navSelected"
                android:text="@string/albums" />

            <TextView
                android:id="@+id/musics"
                style="@style/navButton"
                android:text="@string/musics" />

            <TextView
                android:id="@+id/musicStore"
                style="@style/navButton"
                android:text="@string/music_store" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/serachAlbum"
        style="@style/searchField"
        android:hint="@string/searchAlbum" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    style="@style/albumCover"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/sampleAlbum"
                    style="@style/albumCover"
                    android:src="@drawable/bliss_band_sample" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbum" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/albumCover"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/albumCover"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/albumCover"
                    android:src="@drawable/album_cover" />

                <TextView
                    style="@style/textAlbum"
                    android:text="@string/textAlbumSample" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
